<resources>
    <string name="app_name">neon_keyboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_label">Loading...</string>
    <string name="keyboard_test">Keyboard Test</string>
    <string name="font_style">Font Style</string>
    <string name="language">Language</string>
    <string name="set_theme">Set Theme</string>
    <string name="change_image">Change Image</string>
    <string name="step_2">Step 2</string>
    <string name="set_input_method">Set Input Method</string>
    <string name="step_1">Step 1</string>
    <string name="enable_keyboard">Enable Keyboard</string>
    <string name="input_something">Input something...</string>
    <string name="settings">Settings</string>
    <string name="use_default_theme_image">Use default theme image</string>
    <string name="change_image_label">Change image</string>
    <string name="image_customisation">Image customisation</string>
    <string name="blur_the_background">Blur The Background</string>
    <string name="default_label">Default</string>
    <string name="medium_label">Medium</string>
    <string name="average_label">Average</string>
    <string name="accept">Accept</string>


    <string name="subtype_en_US">English (US)</string>
</resources>