<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/change_image_bg"
    tools:context=".ui.fragments.change_image.ChangeImageFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/change_image_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#1AFFFFFF"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Change Image"
        app:titleMarginStart="@dimen/_28sdp" />

    <RadioGroup
        android:id="@+id/choose_variant_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_28sdp"
        android:paddingEnd="@dimen/_28sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_image_toolbar">

        <RadioButton
            android:id="@+id/use_default_theme_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:fontFamily="@font/roboto"
            android:paddingStart="@dimen/_16sdp"
            android:text="@string/use_default_theme_image"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <RadioButton
            android:id="@+id/change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:fontFamily="@font/roboto"
            android:paddingStart="@dimen/_16sdp"
            android:text="@string/change_image_label"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

    </RadioGroup>

<!--    <com.google.android.material.card.MaterialCardView-->
<!--        android:id="@+id/image_preview_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/_180sdp"-->
<!--        android:visibility="visible"-->
<!--        app:cardCornerRadius="@dimen/_8sdp">-->

<!--    </com.google.android.material.card.MaterialCardView>-->

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_42sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/choose_variant_group"
        android:background="@drawable/image_customisation_bg" />

    <TextView
        android:id="@+id/image_customisation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/image_customisation"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="@id/image_preview"
        app:layout_constraintBottom_toBottomOf="@id/image_preview"
        app:layout_constraintStart_toStartOf="@id/image_preview"
        app:layout_constraintEnd_toEndOf="@id/image_preview"/>

    <TextView
        android:id="@+id/blur_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/blur_the_background"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_preview" />

    <RadioGroup
        android:id="@+id/blur_choose_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blur_label">

        <RadioButton
            android:id="@+id/default_blur_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/default_label"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/medium_blur_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/medium_label"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/average_blur_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/average_label"
            android:textColor="@color/white" />

    </RadioGroup>

    <TextView
        android:id="@+id/accept_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"
        android:background="@drawable/accept_btn_bg"
        android:paddingStart="@dimen/_48sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingEnd="@dimen/_48sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blur_choose_container" />

</androidx.constraintlayout.widget.ConstraintLayout>