<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg"
    tools:context=".ui.fragments.main.MainFragment">

    <LinearLayout
        android:id="@+id/step_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/step_bg"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/step_1"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="end"
            android:text="@string/enable_keyboard"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/step_bg"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/step_2"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="end"
            android:text="@string/set_input_method"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/change_image_btn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/step_2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/change_image_card_bg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="@dimen/_4sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_card_change_image_bg" />

            <ImageView
                android:id="@+id/overlay"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_75sdp"
                android:elevation="@dimen/_8sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_card_change_image_overlay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/ic_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:elevation="@dimen/_8sdp"
                android:src="@drawable/ic_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/overlay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_8sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/change_image"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ic_image"
                app:layout_constraintTop_toBottomOf="@id/ic_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/set_theme_btn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_32sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/step_2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="@dimen/_4sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_set_theme_bg" />

            <ImageView
                android:id="@+id/overlay_1"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_85sdp"
                android:elevation="@dimen/_8sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_overlay_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/ic_image_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:elevation="@dimen/_8sdp"
                android:src="@drawable/ic_theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/overlay_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_8sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/set_theme"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ic_image_2"
                app:layout_constraintTop_toBottomOf="@id/ic_image_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/change_language_btn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/change_image_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/world_bg">

            <ImageView
                android:id="@+id/world"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_28sdp"
                android:elevation="@dimen/_4sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_world"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ic_image_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_28sdp"
                android:elevation="@dimen/_8sdp"
                android:src="@drawable/ic_small_world"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_8sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/language"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ic_image_3"
                app:layout_constraintTop_toBottomOf="@id/ic_image_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/font_style_btn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_18sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/change_image_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/font_bg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="@dimen/_4sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_font_letters" />

            <ImageView
                android:id="@+id/overlay_2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:elevation="@dimen/_8sdp"
                android:src="@drawable/ic_font_overlay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/ic_font_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_8sdp"
                android:text="Aa"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/overlay_2"
                app:layout_constraintEnd_toEndOf="@id/overlay_2"
                app:layout_constraintTop_toTopOf="@id/overlay_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_8sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/font_style"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/overlay_2"
                app:layout_constraintStart_toStartOf="@id/overlay_2"
                app:layout_constraintTop_toBottomOf="@id/ic_font_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/keyboard_test_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:elevation="@dimen/_8sdp"
        android:text="@string/keyboard_test"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/font_style_btn" />

    <EditText
        android:id="@+id/keyboard_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/keyboard_test_edit_text_bg"
        android:hint="@string/input_something"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/white"
        android:textColorHint="#CCFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/keyboard_test_label" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/keyboard_test">

        <LinearLayout
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_8sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_8sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="Share App"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>